# gogoboso2023

./: .pre-commit-config.yaml  README.md  build.py  missing.txt  pyproject.toml  requirements.txt  scraping.py
.github/workflows/: excel.yml
bootstrap/: __main__.py  area.py  area.sql  cache.py  category.py  municipality.py  platinum.py  spot.py  spot.sql  types.py
bootstrap/database/: __init__.py  area.sql  gobo.sql  municipality.sql  spot.sql
gobo/: __main__.py  math.py  order.txt  types.py
gobo/database/: __init__.py  area.py  category.py  gobo.db  gobo.sql  municipality.py  spot.py
