[tool.poetry]
name = "gobo"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
openpyxl = "^3.1.2"


[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pyproject-flake8 = "^6.0.0.post1"
types-openpyxl = "^3.1.0.17"
lxml-stubs = "^0.4.0"


[tool.poetry.group.bootstrap.dependencies]
aiohttp = "^3.8.5"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
exclude = '.venv,.git'
max-line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
