[tool.poetry]
name = "gobo"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gobo = "gobo.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
openpyxl = "^3.1.2"


[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pyproject-flake8 = "^6.0.0.post1"
types-openpyxl = "^3.1.0.17"
lxml-stubs = "^0.4.0"
types-setuptools = "^68.1.0.0"
types-tqdm = "^4.66.0.2"


[tool.poetry.group.bootstrap.dependencies]
aiohttp = "^3.8.5"
lxml = "^4.9.3"
selenium = "^4.11.2"
tqdm = "^4.66.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
exclude = '.venv,.git'
max-line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
